# autoui

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run inspector.bat
src/: main.py
src/autoui/: __init__.py  __main__.py  cli.py
src/autoui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autoui/abstractions/: __init__.py  action.py  condition.py  driver.py  element_tree.py  step.py
src/autoui/actions/: builtin.py
src/autoui/conditions/: __init__.py  builtin.py
src/autoui/core/: context.py  enums.py  events.py  exceptions.py
src/autoui/drivers/: __init__.py  pywinauto_driver.py  pywinauto_tree.py
src/autoui/dsl/: __init__.py  builder.py  precondition.py
src/autoui/explore/: __init__.py  highlight.py  playground.py  pywinauto_helpers.py
src/autoui/guards/: __init__.py  coexistence.py  focus.py  mouse_hook.py
src/autoui/locators/: __init__.py  element_set.py  errors.py  executor.py  locator.py  matching.py  ops.py  serde.py  trace.py
src/autoui/logging/: journal.py
src/autoui/runtime/: pipeline.py  precondition.py  recovery.py  retry.py  runner.py  scenario.py  snapshot.py  step.py
src/autoui/uimap/: __init__.py  element_ref.py  map.py
src/examples/: double_commander_demo.py  exploring.ipynb  notepadpp_find_demo.py  optional_dialog_demo.py  test_pipeline_smoke.py
tests/drivers/: test_pywinauto_tree.py
tests/explore/: test_hierarchy_navigator.py  test_highlight.py  test_locator_codegen.py
tests/locators/: conftest.py  test_driver_contract.py  test_executor.py  test_matching.py  test_serde.py
(+13 files in other folders)
