[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoui"
version = "0.1.0"
description = "Workflow execution engine for deterministic Windows desktop automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywinauto>=0.6.8",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
explore = ["PySide6>=6.5"]

[project.scripts]
autoui = "autoui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
